[package]
version = "0.1.0"
edition = "2024"
name = "puzzler"

[lints.rust]
dead_code = { level = "warn", priority = 1 }
unused = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary_source_item_ordering = "deny"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[dependencies]
image = "0.25.10"
imageproc = "0.26.1"
rayon = "1.12.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
incremental = false
panic = "unwind"
